tests/syntax/bad/testfile-expr10-1.scala
class A { def m() { var x = new (,) } }
object Main { def main(args: Array[String]) { } }
